--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "serverless-http": "^3.2.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
